Fix button alignment and make `Continue` on options primary

--- a/client/components/domains/transfer-domain-step/style.scss
+++ b/client/components/domains/transfer-domain-step/style.scss
@@ -120,7 +120,6 @@
 		p {
 			color: darken( $gray, 10% );
 			font-size: 14px;
-			max-width: 500px;
 		}
 	}
 
